acmacs.r NEWS -- history of user-visible changes.

* Changes in 2.7
** signle thread variant of the grid test
** R 3.5.1


* Changes in 2.6 (2018-07-15)
** fixed bug in making procrustes between projections of the same chart


Local variables:
coding: utf-8
mode: outline
paragraph-separate: "[          ]*$"
end: