@@ -45,6 +45,7 @@ RCPP_MODULE(acmacs_chart)
             .method("remove_antigens", &Chart::remove_antigens)
             .method("remove_sera", &Chart::remove_sera)
             .property<Rcpp::List>("projections", &Chart::getListViaAt<Projection, &acmacs::chart::ChartModify::projections_modify>)
+            .method("remove_all_projections", &Chart::remove_all_projections)
             .property<PlotSpec>("plot_spec", &Chart::plot_spec)
             .property<Titers>("titers", &Chart::titers)
             .method("column_bases", &Chart::column_bases_2, "either forced or calculated column bases, i.e. the ones used for stress calculation and optimization")
