@@ -114,6 +114,7 @@ class Chart : public wrapper<acmacs::chart::ChartModify>
     Projection relax3(std::string minimum_column_basis, size_t number_of_dimensions, bool rough);
     void relax_many(std::string minimum_column_basis, size_t number_of_dimensions, size_t number_of_optimizations, bool rough);
     void sort_projections() { obj_->projections_modify()->sort(); }
+    void remove_all_projections() { obj_->projections_modify()->remove_all(); }
 
 }; // class Chart
 RCPP_EXPOSED_CLASS_NODECL(Chart);
